--- a/task1.html
+++ b/task1.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>This is heading 1</h1>
+      //  <h1>This is heading 1</h1>
         <p>this is task 1 of week 1</p>
     </body>
 </html>
